fixing the banner overflow issue on safari

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -75,8 +75,10 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100%;
   min-height: 100vh;
   max-width: 100%;
+  max-width: 100vw;
   overflow-x: hidden;
   box-sizing: border-box;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -416,6 +418,7 @@ h1, h2, h3, h4, h5, h6 {
 /* line 37, ../scss/project/_modules.scss */
 .banner-link {
   display: block;
+  text-decoration: none;
   width: 48.33333%;
   max-height: 88px;
   margin-left: 8.33333%;
